gitops-apps/n8n/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: n8n
    spec:
      containers:
      - image: docker.n8n.io/n8nio/n8n
        name: n8n
        ports:
        - containerPort: 5678
        resources: {}
status: {}
