gitops-apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: n8n
  name: n8n
  namespace: n8n
spec:
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 5678
  selector:
    app: n8n
status:
  loadBalancer: {}
