gitops-apps/n8n/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: n8n
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /n8n
      rewrite:
        uri: /
      route:
        - destination:
            host: n8n.n8n.svc.cluster.local
            port:
              number: 5678
